--- a/app/scss/base/_base.scss
+++ b/app/scss/base/_base.scss
@@ -11,7 +11,7 @@ html {
 body {
   margin: 0;
   font: 16px/1 $robotoStack;
-  font-weight: 300;
+  font-weight: 300; 
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   background: $black;
@@ -59,8 +59,9 @@ a {
 }
 
 p {
-  @media screen and (min-width: 1024px) {
+  @media screen and #{$desktop} {
     font-size: 18px;
+    line-height: 1.25em;
   }
 }
 
