--- a/app/scss/components/_animations.scss
+++ b/app/scss/components/_animations.scss
@@ -22,6 +22,9 @@ $glow-color: #aaf;
   @media screen and #{$s-phone} and (orientation: landscape) {
     bottom: 15px;
   }
+  @media screen and #{$tablet} {
+    bottom: 100px;
+  }
 }
 
 
@@ -39,6 +42,13 @@ $glow-color: #aaf;
   &:nth-child(2) {
     margin-top: 10px;
     animation-delay: 500ms;
+  }
+  @media screen and #{$tablet} {
+    width: 20px;
+    height: 20px;
+    &:nth-child(2) {
+      margin-top: 20px;
+    }
   }
 }
 
