--- a/app/scss/layout/_about.scss
+++ b/app/scss/layout/_about.scss
@@ -9,7 +9,6 @@
   background-attachment: fixed;
   color: $white;
   padding: 0 2%;
-
   .about-head {
     display: flex;
     align-items: center;
@@ -55,13 +54,13 @@
       // margin: 0 0 2em auto;
       // overflow: auto;
       h4 {
-        margin-bottom: 1em;
+        margin: 1em 0;
         font-weight: 300;
         color: $lightBlue;
       }
       p {
         margin-bottom: 1em;
-        line-height: 1.2;
+        line-height: 1.25;
       }
       a {
         display: inline-block;
@@ -80,10 +79,9 @@
     display: flex;
     flex-wrap: wrap;
     max-width: 1200px;
-    margin: auto;
+    margin: 25px auto 0 auto;
     flex: 1 1 100%;
     font-size: 14px;
-    // border: 1px solid blue;
     h3 {
       width: 100%;
       margin: 1em 0;
@@ -92,34 +90,55 @@
       color: $lightBlue;
     }
     ul {
-      // border: 1px solid red;
-      flex: 1 10%;
-      margin: 0 5px 1em 5px;
+      flex: 1 1 50%;
+      justify-content: space-between;
+      margin: 0 0 1em 0;
       @media screen and #{$s-phone} {
-        margin: 0 10px 1em 10px;
+        margin: 0 0 1em 0;
       }
       @media screen and #{$s-phone} and (orientation: landscape) {
-        margin: 0 30px 1em 30px;
+        margin: 0 0 1em 0;
+        flex: 1 25%;
       }
       @media screen and #{$s-tablet} {
-        margin: 0 30px 1em 30px;
+        margin: 0 0 1em 0;
       }
       @media screen and #{$tablet} {
-        margin: 0 40px 1em 40px;
+        margin: 0 0 1em 0;
+        flex: 1 25%;
       }
       @media screen and #{$desktop} {
-        margin: 0 10px 1em 10px;
+        margin: 0 0 1em 0;
+        flex: 1 15%;
+      }
+      &:nth-child(6),
+      &:nth-child(7) {
+        flex: 2 20%;
+      }
+      &:nth-child(6) {
+        padding-right: 15px;
       }
     }
     li:first-child {
       font-weight: bold;
       margin-bottom: 1em;
     }
+    li {
+      line-height: 1.25em;
+    }
+    @media screen and #{$tablet} {
+      width: 75%;
+      min-width: 600px;
+    }
+    @media screen and #{$desktop} {
+      width: 100%;
+      max-width: 1200px;
+    }
   }
   @media screen and #{$s-phone} and (orientation: landscape) {
     background-position: left;
   }
-  @media screen and(min-width: 768px) {
+  @media screen and #{$tablet} {
     .about-top {
       display: flex;
       justify-content: center;
@@ -127,9 +146,13 @@
       min-width: 718px;
     }
     .about-me {
+
       // margin: 0 auto 0 50px;
       // border: 1px solid blue;
     }
+  }
+  @media screen and #{$tablet} {
+    padding-bottom: 25px;
   }
 }
 
@@ -146,6 +169,14 @@
   }
   p {
     margin: 1em 0;
+  }
+  @media screen and #{$tablet} {
+    span {
+      display: inline;
+    }
+    p {
+      margin: 1em 0;
+    }
   }
 }
 
