--- a/app/scss/layout/_contact.scss
+++ b/app/scss/layout/_contact.scss
@@ -3,12 +3,16 @@
   flex-wrap: wrap;
   color: $white;
   text-align: center;
-  height: calc(100vh - 50px);
+  height: calc(100vh);
   background: #333;
-  background-color: #000000;
-  background-image: url("https://www.transparenttextures.com/patterns/shattered.png");
+  background-color: #000;
+  background-image: url("../img/dark-pavement1.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: left;
   animation: blah infinite;
-
+  margin-bottom: -100px;
   @keyframes blah {
     0% {background-position: top 0px}
     100% {background-position:  top 9000px;}
@@ -25,22 +29,24 @@
     h1 {
       font-size: 2.25em;
     }
-  }
-
-  h2 {
-    flex: 1 100%;
-    margin-bottom: 1em;
-    @media screen and #{$tablet} {
-      font-size: 3em;
+    @media screen and #{$desktop} {
+      height: 200px;
     }
   }
+
   div {
     flex: 1 100%;
   }
-  p {
-    margin-bottom: 1em;
-    @media screen and #{$tablet} {
-      font-size: 2em;
+  .contact-box {
+    p {
+      margin-bottom: 1em;
+      &:first-child {
+        color: $lightBlue;
+        font-weight: 500;
+      }
+      @media screen and #{$tablet} {
+        font-size: 2em;
+      }
     }
   }
   // p:last-child {
@@ -62,8 +68,13 @@
 }
 
 footer {
-  height: 51px;
-  color: white;
-  text-align: center;
-  font-size: 0.8em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100px;
+
+  p {
+    color: white;
+    font-size: 0.8rem;
+  }
 }
