--- a/app/scss/layout/_navbar.scss
+++ b/app/scss/layout/_navbar.scss
@@ -2,7 +2,7 @@
   position: fixed;
   display: flex;
   width: 100%;
-  // background: rgba(0, 0, 0, 0.9);
+  background: rgba(0, 0, 0, 0.9);
   color: $white;
   height: 50px;
   display: flex;
